--- a/style.css
+++ b/style.css
@@ -545,6 +545,7 @@ a:active {
 }
 
 .main-navigation ul ul {
+	background-color: #FFFFFF;
 	box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
 	float: left;
 	position: absolute;
